welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: not found: value j
	setPos(j, i);ecritMessage(y);y = y + 1;
               ^ColumnByColumn:7: error: not found: value j
j = j+1;
^