welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
var x = getMondeHauteur();
var y = 0;
for (i <- 0 to x-1){
	setPos(j, i);ecritMessage(y);y = y + 1;
}
j = j+1;


}	
